--- a/gaea.toml
+++ b/gaea.toml
@@ -1,5 +1,5 @@
 # 全局日志级别
-LOG_LEVEL = "debug"
+LOG_LEVEL = "info"
 
 # rpc 接口路径前缀
 RPC_PREFIX = "/api"
@@ -25,3 +25,8 @@ REDIS_DEFAULT_HOST = "127.0.0.1:6379"
 REDIS_DEFAULT_INIT_CONNS = 1
 # 最大连接数
 REDIS_DEFAULT_MAX_CONNS = 2
+
+# jwt
+JWT_SIGNING_METHOD = "HS512"
+JWT_SIGNING_KEY = "Z3d0X3NpZ25fa2V5" # 签名密钥, 原文: gwt_sign_key
+JWT_EFFECTIVE_DURATION = 172800 # 秒为单位默认2天
